1.0.7: jdk8